--- a/project/index.html
+++ b/project/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="center">
-            <div class="logo"><img src="/img/Incendiary.png" alt=""></div>
+            <div class="logo"><img src="/img/molly.png" alt=""></div>
             <div class="menu">
                 <a href="#">Ascent</a>
                 <a href="#">Split</a>
@@ -24,6 +24,9 @@
             </div>
         </div>
     </header>
+    <div class="container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sit asperiores nihil qui dolorum nemo ducimus cum iste sapiente id minus suscipit, cupiditate neque quasi! Atque, provident deserunt? Doloribus, ducimus.
+    </div>
 
 
 
